         see https://fedorahosted.org/cobbler/wiki/UsingCobblerWithConfigManagementSystem
- (FEAT) ability to use --enable-menu=0/1 to hide profiles from the PXE menu, and config setting to change default value for --enable-menu
- (FEAT) added livecd based physical machine cloner script to "contrib"
- (FEAT) enable import for debian ISOs and mirrors (1 distro at a time for now)

- ??? - 1.2.5 (pending)
- (BUGF) expose --arch for "cobbler image add"
- (BUGF) unbreak dnsmasq DHCP management, similar to ISC bug

- Mon Sep 08 2008 - 1.2.4
- (BUGF) simple rebuild to remove cli_report.py, which is not in git

- Sun Sep 07 2008 - 1.2.3
- (BUGF) fix to manage_isc.py code

- Fri Sep 05 2008 - 1.2.2
>>>>>>> master:CHANGELOG
- (BUGF) fix to where elilo location is loaded in manage_isc.py
- (BUGF) populate netboot_enabled in WebUI correctly
- (BUGF) make RPM own some unowned directories in "triggers"
- (BUGF) add named_conf setting to settings

- Tue Sep 02 2008 - 1.2.1
- (BUGF) fix merge problem with 1.2 

- Fri Aug 29 2008 - 1.2.0
- (FEAT) All development work from 1.X merged in
- (FEAT) when --netboot-enabled is toggled, rather than deleting the PXE config, create a local boot PXE config
- (BUGF) disable some s390 aspects of cobbler check until it is supported
- (FEAT) new --os-version, better validation for --breed, --breed/--os-version also for images

- ??? - 1.1.1
- (FEAT) make template replacement use regex module
- (BUGF) remove bootloader check in settings as that code doesn't need it
- (BUGF) refinements to image handling
- (FEAT) getks command added to command line
- (BUGF) don't print traceback during certain SystemExits
- (BUGF) --help now works more intuitively on odd command line usage
- (BUGF) use pxesystem for systems, not pxeprofile
- (FEAT) make Cheetah formatting errors contain help text for users
- (FEAT) --kopts-post can configure post-install kernel options
- (BUGF) subtemplates are now errorCatcher Echo compatible

- ??? - 1.1.0
- devel branch