@@ -9,6 +9,7 @@ Cobbler CHANGELOG
 - (FEAT) ability to use --enable-menu=0/1 to hide profiles from the PXE menu, and config setting to change default value for --enable-menu
 - (FEAT) added livecd based physical machine cloner script to "contrib"
 - (FEAT) enable import for debian ISOs and mirrors (1 distro at a time for now)
+- (FEAT) auto-create rescue profile objects
 
 - ??? - 1.2.5 (pending)
 - (BUGF) expose --arch for "cobbler image add"
